kubernetes/cluster/flux-instance/app/tailscale-ingress.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/networking.k8s.io/ingress_v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-webhook-tailscale
  namespace: flux-system
  annotations:
    tailscale.com/funnel: "true"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: webhook-receiver
      port:
        number: 80
  tls:
    - hosts:
        - webhook-flux
