kubernetes/cluster/flux-instance/app/webhook-httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-webhook
  namespace: flux-system
  annotations:
    public.external-dns.alpha.kubernetes.io/enabled: "true"
    towonel.io/tunnel: enabled
    towonel.io/tunnel-ref: towonel-system/homelab
spec:
  hostnames:
    - webhook.jetersen.dev
  parentRefs:
    - name: envoy-proxy
      namespace: kube-system
      sectionName: https
  rules:
    - matches:
        - path:
            type: Exact
            value: /test
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.envoyproxy.io
            kind: HTTPRouteFilter
            name: webhook-test-response
    - matches:
        - path:
            type: PathPrefix
            value: /flux/hook
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /hook
      backendRefs:
        - name: webhook-receiver
          namespace: flux-system
          port: 80
    - matches:
        - path:
            type: Exact
            value: /konflate/hooks
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /hooks
      backendRefs:
        - name: konflate
          namespace: konflate
          port: 8080
